[gd_scene load_steps=7 format=2]

[ext_resource path="res://models/tank_shell/tank_shell.gd" type="Script" id=1]
[ext_resource path="res://models/tank_shell/tank_shell.material" type="Material" id=2]
[ext_resource path="res://models/tank_shell/explosion001.wav" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[sub_resource type="PlaneMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 2, 2 )
subdivide_width = 0
subdivide_depth = 0

[sub_resource type="Animation" id=3]

resource_name = "Explode"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Explosion")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="TankShell" type="Spatial" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
damage = 1
speed = 100
lifetime = 4

[node name="Area" type="Area" parent="." index="0"]

transform = Transform( 0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.915165, 0, 0, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 8
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]

transform = Transform( -1.378, 0, 0, 0, -1.37946, 0, 0, 0, -0.883385, 0, -0.0335366, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="Area" index="1"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = ExtResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="MeshInstance2" type="MeshInstance" parent="Area" index="2"]

transform = Transform( -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0, 1, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = ExtResource( 2 )
_sections_unfolded = [ "Transform", "material" ]

[node name="OmniLight" type="OmniLight" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.926282, -1.20199 )
layers = 1
light_color = Color( 1, 0.896606, 0.699219, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
omni_range = 7.0
omni_attenuation = 2.2974
omni_shadow_mode = 1
omni_shadow_detail = 1
_sections_unfolded = [ "Light", "Omni", "Shadow" ]

[node name="LifeTime" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Explosion" type="AudioStreamPlayer3D" parent="." index="3"]

stream = ExtResource( 3 )
attenuation_model = 0
unit_db = 20.0
unit_size = 4.0
max_db = 6.0
pitch_scale = 1.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0
_sections_unfolded = [ "Attenuation Filter" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Explode = SubResource( 3 )
blend_times = [  ]

[connection signal="body_entered" from="Area" to="." method="_on_TankShell_body_entered"]

[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]


